--- a/css/portada.css
+++ b/css/portada.css
@@ -17,7 +17,12 @@ figure {
   margin: 0;
 }
 
-.form-signin {
+h3 {
+  flex-basis: 100%;
+  text-align: center;
+}
+
+/* .form-signin {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
@@ -56,4 +61,4 @@ figure {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-}
+} */
