--- a/css/portada.css
+++ b/css/portada.css
@@ -6,15 +6,18 @@ body {
   border: 0px;
 }
 
+figure {
+  margin: 0;
+}
+
 .fondo {
   width: 99%;
   height: 99%;
+  position: absolute;
+  top: 0;
+  left: 0;
   background: url(../images/portada.jpg) no-repeat top left;
   background-size: cover;
-  position: absolute;
-}
-figure {
-  margin: 0;
 }
 
 h3 {
@@ -22,43 +25,20 @@ h3 {
   text-align: center;
 }
 
-/* .form-signin {
-  max-width: 330px;
-  padding: 15px;
-  margin: 0 auto;
+@media only screen and (max-width: 767px) {
+  .fondo {
+    background-image: url(../images/portada.jpg); /* Imagen específica para móviles */
+    background-size: contain; /* Ajusta para que toda la imagen sea visible */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-position: center; /* Centra la imagen */
+  }
 }
-.form-signin-heading {
-  font-size: 48px;
-  font-style: normal;
-  color: #ffffff;
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .fondo {
+    background-image: url(../images/portada.jpg); /* Imagen para tabletas */
+    background-size: cover; /* Mantiene el ajuste completo */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-position: center; /* Centra la imagen */
+  }
 }
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
-  margin-bottom: 10px;
-  text-align: center;
-}
-.form-signin .checkbox {
-  font-weight: normal;
-}
-.form-signin .form-control {
-  position: relative;
-  height: auto;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 10px;
-  font-size: 16px;
-}
-.form-signin .form-control:focus {
-  z-index: 2;
-}
-.form-signin input[type="text"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-} */
