--- a/css/own_style.css
+++ b/css/own_style.css
@@ -1,29 +1,31 @@
-
 body {
-	padding: 0;
-	margin: 0;
+  padding: 0;
+  margin: 0;
 }
-html, body, #map {
-	height: 100%;
-	width: 100%;
-	padding: 0;
-	margin: 0;
+html,
+body,
+#map {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 th {
-	text-align: left;
-	vertical-align: top;
+  text-align: left;
+  vertical-align: top;
 }
 .info {
-	padding: 6px 8px;
-	font: 14px/16px Arial, Helvetica, sans-serif;
-	background: white;
-	background: rgba(255,255,255,0.8);
-	box-shadow: 0 0 15px rgba(0,0,0,0.2);
-	border-radius: 5px;
+  padding: 6px 8px;
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
 }
 .info h2 {
-	margin: 0 0 5px;
-	color: #777;
+  margin: 0 0 5px;
+  color: #777;
 }
 .leaflet-container {
-	background: #fff;
+  background: #fff;
+}
